--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -48,6 +48,7 @@ img#main-image
 
 ul#thumbnails
   :float right
+  :width 100%
   li
     :float left
     :margin 5px 16px 0 16px
@@ -86,6 +87,29 @@ form
       textarea
         :width 300px
         :margin 0 0 10px 0
+  .form_validation_errors
+    :background-color #ffeded
+    :margin 0 0 10px -20px
+    :padding 10px 20px
+    :color #aa3333
+    h2
+      :font-size 30px
+    h3
+      :text-align left
+      :color #883333
+      :padding 0 0 0 20px
+    ul
+      :margin 10px 0 0 20px
+      li
+        :list-style disc
+        
+.fieldWithErrors
+  :color #aa3333
+  input
+    :border-top 2px solid #aa3333
+    :border-right 1px solid #ddcccc
+    :border-bottom 1px solid #ddcccc
+    :border-left 2px solid #aa3333
         
 #admin-controls
   :background-color #000099
