added settings manager

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,14 +2,14 @@
 %html{:xmlns => 'http://www.w3.org/1999/xhtml', 'xml:lang' => 'en', :lang => 'en'}
   %head
     %meta{'http-equiv' => 'Content-Type', :content => "text/html; charset=iso-8859-1"}
-    %title Vroomclick
+    %title= Settings.dealership_name
     != stylesheet_link_tag('http://yui.yahooapis.com/3.0.0/build/cssreset/reset-min.css', 'http://yui.yahooapis.com/3.0.0/build/cssfonts/fonts-min.css')
     != stylesheet_link_tag('application')
   %body
     - if flash[:notice]
       %p.flash-notice= flash[:notice]
     #wrapper
-      %h1!= link_to 'Vroomclick', root_url
+      %h1!= link_to h(Settings.dealership_name), root_url
       != yield
     #admin-controls
       %ul
@@ -17,5 +17,6 @@
         - if @car and !@car.new_record?
           %li!= link_to 'Edit Details', edit_car_url(@car)
           %li!= link_to 'Add Image', new_car_image_url(@car)
+        %li!= link_to 'Settings', settings_url
         -#%li!= link_to 'Hide Admin Controls', '#'
         %li!= link_to 'Logout', '#'
