--- a/app/views/images/index.haml
+++ b/app/views/images/index.haml
@@ -1,5 +1,6 @@
 %h2= @car.title
-!= image_tag @image.image.url, :id => 'main-image'
+!= image_tag @image_url, :id => 'main-image'
+  
 
 #description= @car.description
 
