--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -52,6 +52,21 @@ ul#thumbnails
   li
     :float left
     :margin 5px 16px 0 16px
+    a
+      :text-decoration none
+      :display block
+      :color #333
+    a.remover
+      :font-weight bold
+      :font-size 14px
+      :margin 10px 0
+      :padding 5px 0
+      :border 1px solid #fbb
+      :color #f22
+    a.remover:hover
+      :background-color #ff9999
+      :border 1px solid #f00
+      :color white
     
 .flash-notice
   :text-align center
