--- a/app/views/cars/index.haml
+++ b/app/views/cars/index.haml
@@ -4,4 +4,5 @@
     %li
       %h3!= link_to h(car.title), car, :title => car.title
       != link_to image_tag(first_car_image(car, :thumbnail)), car, :title => car.title
-      != link_to 'Remove', car, :method => :delete, :class => 'remover'
+      - if logged_in?
+        != link_to 'Remove', car, :method => :delete, :class => 'remover'
