--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,12 +11,13 @@
     #wrapper
       %h1!= link_to h(Settings.dealership_name), root_url
       != yield
-    #admin-controls
-      %ul
-        %li!= link_to 'Add New Car', new_car_url
-        - if @car and !@car.new_record?
-          %li!= link_to 'Edit Details', edit_car_url(@car)
-          %li!= link_to 'Add Image', new_car_image_url(@car)
-        %li!= link_to 'Settings', settings_url
-        -#%li!= link_to 'Hide Admin Controls', '#'
-        %li!= link_to 'Logout', '#'
+    - if logged_in?
+      #admin-controls
+        %ul
+          %li!= link_to 'Add New Car', new_car_url
+          - if @car and !@car.new_record?
+            %li!= link_to 'Edit Details', edit_car_url(@car)
+            %li!= link_to 'Add Image', new_car_image_url(@car)
+          %li!= link_to 'Settings', settings_url
+          -#%li!= link_to 'Hide Admin Controls', '#'
+          %li!= link_to 'Logout', logout_url
